# abb4600_rws_ws

./: .gitignore  move_target210.sh  start_abb4600_gazebo.sh  完整启动命令  摘钩命令说明  项目总结文档.md
install/: local_setup.sh  (+1 more)
src/abb4600_rws_cpp/: CMakeLists.txt  CMakeLists.txt.bak_before_run_robot_path  README_ros2_control_robotstudio.md  package.xml  package.xml.bak_before_run_robot_path
src/abb4600_rws_cpp/config/: singularity_aware_action_kinematics.yaml  singularity_aware_kinematics.yaml
src/abb4600_rws_cpp/frp/: frpc_egm_ubuntu.toml
src/abb4600_rws_cpp/include/abb4600_rws_cpp/: singularity_aware_planner.hpp  singularity_aware_planner.hpp.bak_external_margin_005  singularity_aware_planner.hpp.bak_external_margin_010  singularity_aware_planner.hpp.bak_force_all_external_margin_008  singularity_aware_planner.hpp.bak_force_external_008_tagged  singularity_aware_planner.hpp.bak_real_external_margin_008  singularity_aware_planner.hpp.bak_seed_fix  trajectory_guard.hpp  trajectory_guard.hpp.bak_before_joint3_060  trajectory_guard.hpp.bak_before_safe_limits  trajectory_guard.hpp.bak_fix_hard_limits  trajectory_guard.hpp.bak_velocity_080
src/abb4600_rws_cpp/launch/: abb4600_robotstudio_control.launch.py  execute_path10_moveit.launch.py  execute_train_hook_moveit.launch.py  move_to_target_pose.launch.py  path10_sparse_ompl_planner.launch.py  run_robot_path_action_server.launch.py  vision_target_pose_planner.launch.py
src/abb4600_rws_cpp/robotstudio/: EGMHoldWide.mod  EGMTest.mod  ExportGuijiJointTargets.mod  TRob1Main.mod
src/abb4600_rws_cpp/scripts/: egm_joint6_sweep_test.py  record_p10_joints.py  return_to_p10.py  tiny_joint1_test.py  tiny_joint6_test.py
src/abb4600_rws_cpp/src/: execute_path10_moveit_node.cpp.bak_20260629_141537  execute_path10_moveit_node.cpp.bak_20260629_143034  execute_path10_moveit_node.cpp.bak_before_fixed_target210_joint_start  execute_path10_moveit_node.cpp.bak_before_restore_20260624_091444  execute_path10_moveit_node.cpp.bak_skip_start_20260629_135136  execute_train_hook_moveit_node.cpp  move_to_target_pose.cpp  path10_sparse_ompl_planner_node.cpp  path10_sparse_ompl_planner_node.cpp.bak_before_copy_path10_targets  path10_sparse_ompl_planner_node.cpp.bak_before_singularity_avoid_constraints  path10_sparse_ompl_planner_node.cpp.save  run_robot_path_action_server.cpp  run_robot_path_action_server.cpp.bak_before_cartesian_slowdown  run_robot_path_action_server.cpp.bak_before_fix_path10_return_joint_target  run_robot_path_action_server.cpp.bak_before_fix_return_to_start_joint  run_robot_path_action_server.cpp.bak_before_p10_start  run_robot_path_action_server.cpp.bak_before_pause_resume_cancel  run_robot_path_action_server.cpp.bak_before_return_home  run_robot_path_action_server.cpp.bak_before_return_home_joint_target210  run_robot_path_action_server.cpp.bak_before_return_home_rapid_path  run_robot_path_action_server.cpp.bak_before_safe_pose_mm  run_robot_path_action_server.cpp.bak_before_safe_pose_use_guiji_frame  run_robot_path_action_server.cpp.bak_before_safe_target  run_robot_path_action_server.cpp.bak_before_tcp_base_interface  run_robot_path_action_server.cpp.bak_filter_q5_candidate  run_robot_path_action_server.cpp.bak_filter_q5_same_sign  run_robot_path_action_server.cpp.bak_fix_all_target210_correct  run_robot_path_action_server.cpp.bak_fix_path10_start_guard  run_robot_path_action_server.cpp.bak_force_path10_start_joint210  run_robot_path_action_server.cpp.bak_force_return_target210  run_robot_path_action_server.cpp.bak_positive_q5_ik_search  run_robot_path_action_server.cpp.bak_return_home_cartesian_failed  run_robot_path_action_server.cpp.bak_return_home_direct_target210  run_robot_path_action_server.cpp.success_safe_targets  singularity_aware_target_demo_node.cpp.bak_fix_target_name_scope  singularity_aware_target_demo_node.cpp.bak_seed_fix  singularity_aware_target_demo_node.cpp.bak_target60_success  singularity_aware_target_demo_node.cpp.success_v03  start_fixed_path_node.cpp  vision_target_pose_planner_node.cpp
src/abb_hardware_interface/: CMakeLists.txt  abb_hardware_interface.xml  package.xml
src/abb_hardware_interface/include/abb_hardware_interface/: abb_hardware_interface.hpp  utilities.hpp  visibility_control.h
src/abb_hardware_interface/src/: abb_hardware_interface.cpp  utilities.cpp
src/abb_irb4600_60_205_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/abb_irb4600_60_205_moveit_config/config/: abb_irb4600_60_205.srdf.xacro  abb_irb4600_60_205_macro.srdf.xacro  joint_limits.yaml  joint_limits.yaml.bak_slow  moveit_controllers.yaml  ompl_planning.yaml  ompl_planning.yaml.bak  ompl_planning.yaml.bak_force_ompl  ompl_planning.yaml.bak_timeparam
src/abb_irb4600_60_205_moveit_config/rviz/: moveit.rviz
src/abb_irb4600_support/: package.xml
src/abb_irb4600_support/launch/: view_robot.launch.py
src/abb_irb4600_support/urdf/: irb4600.ros2_control.xacro  irb4600_20_250.xacro  irb4600_20_250_macro.xacro  irb4600_40_255.xacro  irb4600_40_255_macro.xacro  irb4600_60_205.xacro  irb4600_60_205_macro.xacro
src/abb_ros2/: package.xml
src/abb_rws_client/: CMakeLists.txt  package.xml
src/abb_rws_client/include/abb_rws_client/: mapping.hpp  rws_service_provider_ros.hpp  rws_state_publisher_ros.hpp
src/abb_rws_client/src/: mapping.cpp  rws_service_provider_ros.cpp  rws_state_publisher_ros.cpp
src/sm_abb4600_unhook/: CMakeLists.txt  CMakeLists.txt.bak_auto_p10_deps  CMakeLists.txt.bak_before_idle  README.md  package.xml  package.xml.bak_auto_p10_deps  package.xml.bak_before_idle
src/sm_abb4600_unhook/backup_before_safety_confirm_recover/: CMakeLists.txt  package.xml  sm_abb4600_unhook.hpp  st_error.hpp  st_wait_system_ready.hpp
src/sm_abb4600_unhook/config/: sm_abb4600_unhook.yaml  sm_abb4600_unhook_config.yaml
src/sm_abb4600_unhook/include/sm_abb4600_unhook/: sm_abb4600_unhook.hpp  sm_abb4600_unhook.hpp.bak_before_idle  sm_abb4600_unhook.hpp.bak_fix_stidle  sm_abb4600_unhook.hpp.bak_remove_ortimer
src/sm_abb4600_unhook/launch/: manual_target_unhook_state_machine.launch.py  sm_abb4600_unhook.launch
(+68 files in other folders)
