<?xml version="1.0"?>
<package format="2">
  <name>abb_irb4600_60_205_moveit_config</name>
  <version>0.0.0</version>
  <description>
    ABB IRB 4600-60/2.05 的 MoveIt 配置包。
  </description>

  <maintainer email="cjx@example.com">cjx</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>abb_irb4600_support</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
