<?xml version="1.0" ?>
<package format="2">
  <name>abb_irb4600_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ABB IRB 4600 及其变体的 ROS-Industrial 支持包。
    </p>
    <p>
      本包包含 ABB IRB 4600 机械臂的配置数据、三维模型和启动文件。
      当前包括 20/2.50、40/2.55 和 60/2.05 变体。
    </p>
    <p>
      关节限位和最大关节速度基于
      <em>ABB IRB 4600 Product Specification</em>, <em>3HAC032885-001, Rev Z</em>
      中的信息。除非另有说明，所有 urdf / xacro 都基于默认运动范围和关节速度限制，
      不包含高速关节、扩展/受限运动范围或其他选项。
    </p>
    <p>
      使用本包中的配置文件或网格模型前，请确认它们与你计划使用的具体机器人型号和配置一致。
    </p>
  </description>
  <author>Jonathan Meyer (Southwest Research Institute)</author>
  <author>Rik Tonnaer (SAM|XL)</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <maintainer email="yadunund@gmail.com">Yadunund</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb_irb4600_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
